--- a/package.json
+++ b/package.json
@@ -2,16 +2,25 @@
   "name": "ts-backend-production-template",
   "version": "1.0.0",
   "main": "src/server.js",
+
+
+
+
+
   "scripts": {
+    "test":"node test.js",
     "dist": "npx tsc",
     "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
-    "start": "cross-env NODE_ENV=production node dist/server.js"
+    "start": "cross-env NODE_ENV=production node dist/server.js",
+    "prepare": "husky"
   },
   "author": "Vk-Coder",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@types/node": "^22.5.2",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.10",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
